resources/style.css
/** prevent white flash on reload **/
body, html {
	background: #3a404b;
}

@font-face {
	font-family: "suse";
	src: url("./resources/fonts/SUSE-Medium.woff2");
}

/* desktop widescreen */
@media (min-width: 801px) {
	#site_container {
		align-items: baseline;
		display: flex;
		flex-wrap: nowrap;
		width: 100%;
		margin: 5rem 0 2rem 0;
		overflow: scroll;
		background-color: #3a404b;
		font-family: suse, sans-serif;
	}
	
	#navbar_container {
		order: 1;
		flex: 1 0 15%;
		margin-left: auto;
		min-width: 8rem;
		max-width: fit-content;
	}

	#content_container {
		order: 2;
		flex: 1 0 75%;
		padding-left: 4rem;
		min-width: 32rem;
		max-width: 32rem;
		margin-right: auto;
		align-items: right;
		color: whitesmoke;
	}

	#main_menu li {
		list-style-type: none;
		text-align: right;
		font-size: 2rem;
		margin-top: 1rem;
		padding: .2rem;
	}

	#site_path_short {
		display:none;
		visibility: collapse;
	}
}

/* mobile or narrow displays */
@media(max-width: 800px) {
	#site_container {
		align-items: baseline;
		display: flex;
		flex-wrap: wrap;
		margin-top: 1rem;
		background-color: #3a404b;
		font-family: suse,
					 sans-serif;
	}

	#navbar_container {
		order: 1;
		padding-left: 2rem;
	}

	#content_container {
		order: 2;
		flex: 1 0 75%;
		padding-left: 2rem;
		padding-right: 2rem;
		width: fit-content;
		color: whitesmoke;
		overflow: auto;
	}

	#site_name {
		display: none;
		visibility: collapse;
	}

	#main_menu li {
		list-style-type: none;
		display: inline;
		margin-right: 1rem;
	}

	#site_path {
		display: none;
		visibility: collapse;
	}

	#site_path_post {
		display: none;
		visibility: collapse;
	}

	#site_path_short {
		color: darkorange;
		font-size: 2rem;
		transform: translate(-1rem);
		margin-top: 0;
		margin-bottom: 1rem;
		padding-left: 1rem;
	}

	#rand_tab {
		visibility: collapse;
		display: none;
	}

}

#site_name {
	text-align: right;
	padding-top: .2rem;
	padding-bottom: .2rem;
	padding-right: .2rem;
}

#site_path {
	color: darkorange;
	font-size: 2rem;
	transform: translate(-1rem);
	margin-bottom: 1rem;
}

#site_path_post {
	color: darkgrey;
	font-size: 2rem;
	transform: translate(-1rem);
	margin-bottom: 0;
}

#navbar {
	list-style: none;
	text-align: right;
	font-size: 2rem;
}

#main_menu {
	display: block;
	padding-left: 0;
}

#content {
	font-size: 1.1rem;
	line-height: 1.5;
}

.tagline {
	font-size: 1.4rem;
	padding-left: .2rem;
	color: darkgray;
	margin-top: 0;
}

#next {
	float: right;
	color: darkorange;
	font-size: 2rem;
	text-decoration: none;
}

#last {
	float: left;
	color: darkorange;
	font-size: 2rem;
	text-decoration: none;
}

#error {
	color: whitesmoke;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	height: 100vh;
}

/** classes **/
.h1 {
	color: darkorange;
	margin-top: 0;
}

.h1 {
	font-size: 2rem;
	margin-bottom: 0;
}

.h2 {
	font-size: 2rem;
	color: darkgrey;
	margin-bottom: 0;
}

.h3 {
	font-size: 2rem;
	color: darkgrey;
	margin-bottom: 0;
}

.h4 {
	font-size: 1.8rem;
	color: darkgrey;
	margin-bottom: 0;
}

.h5 {
	font-size: 1.6rem;
	color: darkgrey;
	margin-bottom: 0;
}

.h6 {
	margin: 0;
	font-size: 1.3rem;
	color: darkgrey;
}

.hr {
	border-top: 2px solid white;
}

.pre {
	overflow: auto;
}

.strong {
	font-weight: 800;
}

.ul {
	list-style-type: square;
}

.link {
	text-decoration: none;
}

.link:hover {
	text-decoration: underline;
}

.body_link {
	color: darkorange;
}

.body_photo {
	width: 100%;
	object-fit: contain;
	border: 1px solid white;
}

.body_photo_div {
	margin-top: 1rem;
	display: block;
	max-width: 100%;
	margin-left: auto;
	margin-right: auto;
}

.body_alt_text {
	margin-top: 0%;
	font-style: italic;
}

.grey {
	color: darkgrey !important;
}

.quote {
	font-style: oblique;
	display: block;
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
	padding-left: 1rem;
	border-left: 3px solid darkorange;
}

.tab {
	color: darkgray;
	font-weight: bold;
	text-decoration: none;
	padding: .2rem;
}

.tab:hover {
	background-color: darkorange;
	color: #3a404b;
}

.current_tab {
	background-color: darkgrey;
	color: #3a404b;
}

.p {
	margin-top: 0;
}

.title {
	margin-top: 1rem;
}

.subtitle {
	margin-bottom: 1rem;
}

.topic_tag {
	padding: 0.2rem;
	font-weight: 500;
	margin-right: 0.7rem;
	background-color: darkgray;
	text-decoration: none;
	color: #3a404b;
}

.topic_tag:hover {
	background-color: darkorange;
	color: #3a404b;
}

